--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">  
-        <link rel="stylesheet" href="./node_modules/xterm/dist/xterm.css" />
+        <link rel="stylesheet" href="./assets/xterm.css" />
         <link rel="stylesheet" href="./assets/photon/css/photon.css" />
         <link rel="stylesheet" href="./assets/style.css" />
         <title>Shelly</title>
