--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
       </div>
     </div>
   </body>
-  <script src="./utils/control.js"></script>
+  <script src="./utils/terminal_control.js"></script>
   <script src="./index.js"></script>
 </html>
