--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <!-- .toolbar-header sits at the top of app -->
       <header class="toolbar toolbar-header">
         <h1 class="title">Shelly</h1>
+        <div id="title-bar-btns">
+          <button id="close-btn"><span class="icon icon-cancel"></span></button>
+        </div>
       </header>
       <!-- app's content goes inside .window-content -->
       <div id="shell"></div>
