can show directory now

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
         </div>
       </header>
       <!-- app's content goes inside .window-content -->
-      <div id="shell"></div>
       <div class="window-content">
+        <nav class="nav-group">
+          <h5 class="nav-group-title"></h5>
+        </nav>
         <div id="container">
           <div id="input-line" class="input-line">
             <div class="prompt"></div>
