can register native command

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
     </div>
   </body>
-  <script src="./index.js"></script>
-  <script src="./utils/terminal_control.js"></script>
+  <script src="./ui/index.js"></script>
+  <script src="./utils/TerminalControl.js"></script>
   <script src="./utils/jquery-ui.js"></script>
 </html>
