can drag and drop now

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
       </header>
       <!-- app's content goes inside .window-content -->
-      <div class="window-content">
+      <div class="window-content" id="w-content">
         <nav class="nav-group">
           <h5 class="nav-group-title"></h5>
         </nav>
