--- a/index.html
+++ b/index.html
@@ -38,4 +38,5 @@
   <script src="./ui/index.js"></script>
   <script src="./utils/TerminalControl.js"></script>
   <script src="./utils/jquery-ui.js"></script>
+  <script src="./utils/time.js"></script>
 </html>
