--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <div class="prompt"></div>
             <div><input class="cmdline" autofocus /></div>
           </div>
+          <div id="time"></div>
           <div id="output-container">
             <output></output>
           </div>
